bug fixes related to content

--- a/m.band_saw.htm
+++ b/m.band_saw.htm
@@ -108,7 +108,7 @@
 					<div class="content-main-lt">
 						<h3>Dake-Johnson JH10 workhorse - Made in USA</h3>
 						<img src="http://www.americanmachinetools.com/images/dake_J10_horizontal.jpg" alt="Image of Dake JH10W - Still made in USA">
-						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+JH10-Wet+Horizontal+Band+Saw&form=2">Click to Request a Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+JH10-Wet+Horizontal+Band+Saw&form=2">Click to Request this Quote</a></p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 10" Round, 18" wide Flat Bar<br/>@45&deg;: 5" Round, 11 x 5" Flat Bar</li>
 							<li>Blade speeds: 50, 90, 160, 270 fpm.</li>
@@ -130,7 +130,7 @@
 					<div class="content-main-lt">
 						<h3>BS-250 or 260 Swivel-Head Horizontal Band Saw</h3>
 						<img src="http://www.americanmachinetools.com/images/baileigh_bs250m.jpg" alt="Picture of Baileigh BS-250 horizontal band saw.">
-						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Baileigh+250M+Horizontal+BandSaw&form=2">Click to Request a Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Baileigh+250M+Horizontal+BandSaw&form=2">Click to Request this Quote</a></p>
 						<p class="bold-text">Available in 110 volts, 1 phase (BS-250) or 220 volts, 1 phase (BS-260).</p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 8.75" Round, 10 x 4" Flat Bar<br/>@45&deg;: 6.5" Round, 5.5" Square</li>
@@ -150,7 +150,7 @@
 					<div class="content-main-lt">
 						<h3>Dake TRAD-301 Swivel-head Horizontal Band Saw Heavy Duty</h3>
 						<img src="http://www.americanmachinetools.com/images/trad-300.jpg" alt="Photo of Dake TRAD300 metal cutting Horizontal Mitering Band Saw">
-						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+TRAD300+Horizontal+Band+Saw&form=2">Click to Request a Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+TRAD300+Horizontal+Band+Saw&form=2">Click to Request this Quote</a></p>
 						<p class="bold-text">220 volts, 3 phase</p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 10" Round, 11.75 x 7" flat bar<br/>@45&deg;: 7.5" Round, 7.5 x 6.5" flat bar</li>
@@ -337,10 +337,10 @@
 								<table>
 									<tbody>
 										<tr>
-											<td class="mob-tab-cell">Machine</td>
-											<td class="mob-tab-cell-nowrap">KV50<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50+Vertical+Band-Saw&form=2">Request Quote</a></td>
-											<td class="mob-tab-cell-nowrap">KV60<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV60+Vertical+BandSaw&form=2">Request Quote</a></td>
-											<td class="mob-tab-cell-nowrap">KV100<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100+Vertical+Band-Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell"><b>Machine</b></td>
+											<td class="mob-tab-cell-nowrap"><b>KV50</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><b>KV60</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV60+Vertical+BandSaw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><b>KV100</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">Throat</td>
@@ -418,9 +418,9 @@
 								<table>
 									<tbody>
 										<tr>
-											<td class="mob-tab-cell">Machine</td>
-											<td class="mob-tab-cell-nowrap">KV50A<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50A+Vertical+Band-Saw&form=2">Request Quote</a></td>
-											<td class="mob-tab-cell-nowrap">KV100A<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100A+Vertical+BandSaw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell"><b>Machine</b></td>
+											<td class="mob-tab-cell-nowrap"><b>KV50A</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50A+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><b>KV100A</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100A+Vertical+BandSaw&form=2"><b>Request Quote</b></a></td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">Throat</td>
@@ -476,16 +476,16 @@
 								 <table>
 								 	<tbody>
 								 		<tr>
-								 			<td class="mob-tab-cell">Click below to <br>Request a Price Quote</td>
-								 			<td class="mob-tab-cell">Blade Speed<br/>fpm</td>
-								 			<td class="mob-tab-cell">Motor<br/>HP</td>
-								 			<td class="mob-tab-cell">Throat Depth</td>
-								 			<td class="mob-tab-cell">Max Work Height</td>
-								 			<td class="mob-tab-cell">Table Size</td>
-								 			<td class="mob-tab-cell">Max Table Tilts</td>
+								 			<td class="mob-tab-cell"><b>Click below to <br>Request a Price Quote</b></td>
+								 			<td class="mob-tab-cell"><b>Blade Speed<br/>fpm</b></td>
+								 			<td class="mob-tab-cell"><b>Motor<br/>HP</b></td>
+								 			<td class="mob-tab-cell"><b>Throat Depth</b></td>
+								 			<td class="mob-tab-cell"><b>Max Work Height</b></td>
+								 			<td class="mob-tab-cell"><b>Table Size</b></td>
+								 			<td class="mob-tab-cell"><b>Max Table Tilts</b></td>
 								 		</tr>
 								 		<tr>
-								 			<td class="mob-tab-cell-nowrap">Dake Model 14-10<br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+14-10+Vertical+Band+Saw&form=2">Request Quote</a></td>
+								 			<td class="mob-tab-cell-nowrap"><b>Dake Model 14-10</b><br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+14-10+Vertical+Band+Saw&form=2">Request Quote</a></td>
 								 			<td class="mob-tab-cell">70<br/>140<br/>270<br/>540</td>
 								 			<td class="mob-tab-cell">1</td>
 								 			<td class="mob-tab-cell">14"</td>
@@ -494,7 +494,7 @@
 								 			<td class="mob-tab-cell-nowrap">5&deg; Left<br/>45&deg;Right</td>
 								 		</tr>
 								 		<tr>
-								 			<td class="mob-tab-cell-nowrap">Dake Trademaster<br/>Adjustable blade feed pressure<br/>Work light.<br/>Extra Heavy Duty.<br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Trademaster+Vertical+Band+Saw&form=2">Request Quote</a></td>
+								 			<td class="mob-tab-cell-nowrap"><b>Dake Trademaster</b><br/>Adjustable blade feed pressure<br/>Work light.<br/>Extra Heavy Duty.<br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Trademaster+Vertical+Band+Saw&form=2">Request Quote</a></td>
 								 			<td class="mob-tab-cell-nowrap">Variable<br/>50 to 500</td>
 								 			<td class="mob-tab-cell">1.5</td>
 								 			<td class="mob-tab-cell">19.5"</td>
@@ -542,16 +542,16 @@
 									<tbody>
 										<tr>
 											<td class="mob-tab-cell"></td>
-											<td class="mob-tab-cell">Blade Speed<br/>(fpm)</td>
-											<td class="mob-tab-cell">Motor<br/>(HP)</td>
-											<td class="mob-tab-cell">Throat Depth</td>
-											<td class="mob-tab-cell">Max Work Height</td>
-											<td class="mob-tab-cell">Table Size</td>
-											<td class="mob-tab-cell">Max Table Tilts</td>
-											<td class="mob-tab-cell">Max Blade Width</td>
+											<td class="mob-tab-cell"><b>Blade Speed<br/>(fpm)</b></td>
+											<td class="mob-tab-cell"><b>Motor<br/>(HP)</b></td>
+											<td class="mob-tab-cell"><b>Throat Depth</b></td>
+											<td class="mob-tab-cell"><b>Max Work Height</b></td>
+											<td class="mob-tab-cell"><b>Table Size</b></td>
+											<td class="mob-tab-cell"><b>Max Table Tilts</b></td>
+											<td class="mob-tab-cell"><b>Max Blade Width</b></td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap">Dake-Johnson F-16<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+F-16+Vertical+BandSaw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap"><b>Dake-Johnson F-16<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+F-16+Vertical+BandSaw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 590</td>
 											<td class="mob-tab-cell">1.5</td>
 											<td class="mob-tab-cell">16"</td>
@@ -561,7 +561,7 @@
 											<td class="mob-tab-cell">5/8"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell">Dake-Johnson V-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-24+Vertical+Band+Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell"><b>Dake-Johnson V-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-24+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell-nowrap">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">23"</td>
@@ -571,7 +571,7 @@
 											<td class="mob-tab-cell">1"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap">Dake-Johnson VH-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-24+Vertical+Band+Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap"><b>Dake-Johnson VH-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-24+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">23"</td>
@@ -581,7 +581,7 @@
 											<td class="mob-tab-cell">1"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell">Dake-Johnson V-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-40+Vertical+Band+Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell"><b>Dake-Johnson V-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-40+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">41"</td>
@@ -591,7 +591,7 @@
 											<td class="mob-tab-cell">3/4"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap">Dake-Johnson VH-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-40+Vertical+BandSaw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap"><b>Dake-Johnson VH-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-40+Vertical+BandSaw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">41"</td>
@@ -662,7 +662,7 @@
                 Phone: 773-334-5000<br/>
                 Fax: 773-442-0314
                 <p>
-                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Lathe+Information+Request"><b>Click to email Us</b></a>
+                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Saws+Information+Request"><b>Click to email Us</b></a>
                <br>
                     <a class="bold-text" href="http://www.americanmachinetools.com/machinery_safety.htm">Click for our Machinery Safety webpage</a>
                 </p>
