--- a/m.cold_saws.htm
+++ b/m.cold_saws.htm
@@ -39,7 +39,7 @@
                         <h3>Jet Model JF225 Portable Metal Cutting Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/jet_J-F225_circular.jpg" alt="Jet J-F225 portable metal cutting Cold Saw">
                         <p class="bold-text text-center">
-                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JF225+Portable+Cold+Saw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JF225+Portable+Cold+Saw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity:
@@ -65,7 +65,7 @@
                         <h3>Jet CS-275 Metal Cutting Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/Jet_cs275_coldsaw.jpg" alt="Jet CS-275 metal cutting circular cold_saw machine">
                         <p class="bold-text text-center">
-                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-275+ColdSaw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-275+ColdSaw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity:
@@ -91,7 +91,7 @@
                         <h3>Jet CS-315 Metal Cutting Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/jet_cs315_saw.jpg" alt="Jet CS-315 metal cutting coldsaw machine">
                         <p class="bold-text text-center">
-                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-315+ColdSaw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-315+ColdSaw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity: 
@@ -118,7 +118,7 @@
                         <h3>Jet JCK350-2K Non-Ferrous Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/Jet_JFK350-2K_coldsaw.jpg" alt="Jet JFK350-2K metal cutting coldsaw machine">
                         <p class="bold-text text-center">
-                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JFK350-2K+Cold+Saw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JFK350-2K+Cold+Saw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity: 
