--- a/m.ironworker.htm
+++ b/m.ironworker.htm
@@ -87,7 +87,7 @@
 							Light duty starter Ironworker machine that has 2 hydraulic powered stations to fit almost any 2 sets of tooling. Comes with a punching head on left side, but there is an optional flat-bar-shear/angle-shear/rod-shear attachment that can be mounted in the hydaulic powered jaw on the right side instead of being built into the machine as is on our larger sizes.
 						</p>
 						<p class="text-center">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+25+ton+Punch+Press&amp;form=3" target="_blank"><b>Click to Request this Quote</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+25+ton+Punch+Press&amp;form=3" target="_blank"><b>Click to Request this Quote and complete info packet</b></a>
 						</p>
 					</div>
 				</div>
@@ -114,7 +114,7 @@
 							<li>Punches 1" diameter thru 1/2" thick steel plate</li>
 							<li>Plate Shear cuts 3/8 x 10" steel plate</li>
 							<li>Angle Shear cuts 3 x 3 x 1/4" angle iron</li>
-							<li>Weight: 1200 lbs</li>
+							<li>Weight: 1200  pounds.</li>
 							<li>Electrics: 220 Volts, 3 phase. Optional 440V or 220V, 1 phase</li>
 						</ul>
 						<span>Optional Tooling Available:</span>
@@ -132,11 +132,13 @@
 						<p class="bold-text">
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
-						<p class="text-center">
+						<p><b>$8299</b>. We also include a tool box of 8 round punch & die sets and free shipping to most of USA.</p>
+						<p class="text-center bold-text">
 							<a href="http://www.youtube.com/user/EdwardsMfgCo?blend=11&amp;ob=5#p/f/0/nWEFNJNOhAE" target="_blank">Click to see the Youtube VIDEO</a>
 						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="text-center bold-text">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+40+Ton+Ironworker&amp;form=3" target="_blank">Click to Request this Quote</a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+40+Ton+Ironworker&amp;form=3" target="_blank">Click to Request Our Lower Discount Price and info packet</a>
 						</p>
 					</div>
 				</div>
@@ -151,7 +153,7 @@
 							Made in USA
 						</p>
 						<p class="bold-text">
-							Alot lighter than the 55 ton machine.
+							A lot lighter than the 55 ton machine.
 							<br/>
 							2 weeks to build this machine. 
 						</p>
@@ -174,11 +176,13 @@
 						<p class="text-justify">
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text text-justify">
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="text-center">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+iron+worker+50+Ton&amp;form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+iron+worker+50+Ton&amp;form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 					</div>
 				</div>
@@ -191,7 +195,7 @@
 							Has spare hydraulic powered cavity for optional tooling on the right side
 						</p>
 						<p class="bold-text">
-							<span class="content-price">Price: $10299</span>
+							<span class="content-price text-center">Price: $10299</span>
 							<br/>
 							<span>Made in USA</span>
 						</p>
@@ -211,9 +215,13 @@
 							<li>Built in Bar Shear cuts 1/2 x 12", 3/8 x 14", 3/4 x 4", 1-1/8 round</li>
 							<li>Built in Angle Shear cuts 4 x 4 x 1/4" angle or 3 x 3 x 3/8" angle or smaller</li>
 							<li>Coper-Notcher 2 x 4 x 5/16" (option shown in photo)</li>
-							<li>Weight: 2250 lbs</li>
+							<li>Weight: 2250 pounds</li>
 							<li>Electrics: 220 Volts, 3 phase. Optional 440V or 220V, 1 phase</li>
 						</ul>
+						<p class="text-justify">
+							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
+						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text text-justify">
 							The 55 ton is Edwards' most popular machine because it is heavy, low priced, can hold any two sets of tooling such as a punching head and pipe notcher or press brake and coper-notcher or 2 punching heads and is always in stock.
 						</p>
@@ -221,7 +229,7 @@
 							<a href="http://www.youtube.com/watch?v=tz3rgS-mYHk&feature=related" target="_blank">Click to see the Youtube VIDEO</a>
 						</p>
 						<p class="text-center">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+55+Ton&form=3" target="_blank"><b>Click to Request this Quote</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+55+Ton&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 					</div>
 				</div>
@@ -247,17 +255,18 @@
 							<li>Built in Bar Shear cuts 1/2 x 12", 3/8 x 14", 3/4 x 4", 1-1/8" round</li>
 							<li>Built in larger angle shear cuts 4 x 4 x 3/8" or 3 x 3 x 1/2" angle or smaller</li>
 							<li>Built-in Coper-Notcher 2-1/2" x 5" x 1/4 or 2-1/2" x 4" x 3/8"</li>
-							<li>Weight: 2500 lbs</li>
+							<li>Weight: 2500 pounds.</li>
 							<li>Electrics: 220 Volts, 3 phase. Optional 440V or 220V, 1 phase</li>
 						</ul>
 						<p class="text-justify">
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text text-justify">
 							Optional 2" capacity pipe bender or shop press attachment available.
 						</p>
 						<p class="text-center bold-text">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Iron-worker+60+Ton+Machine&form=3" target="_blank">Click to Request our Discount Price</a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Iron-worker+60+Ton+Machine&form=3" target="_blank">Click to Request Our Lower Discount Price and info packet</a>
 						</p>
 					</div>
 				</div>
@@ -274,7 +283,7 @@
 							<span class="text-center">Made in USA</span>
 						</p>
 						<p class="bold-text text-justify">
-							THIS MACHINE IS NORMALLY IN STOCK at 3 phase and 1 phase
+							THIS MACHINE IS NORMALLY IN STOCK at 230 Volts 3 phase
 							<br/>
 							Takes 3 Weeks to build this machine with other Voltages.
 						</p>
@@ -286,24 +295,25 @@
 							<li>Built in Angle Shear cuts 5 x 5 x 1/4 angle or 4 x 4x 3/8 angle</li>
 							<li>Built-in Coper-Notcher (2-1/2 x 6 x 3/8) included</li>
 							<li class="bold-text">Spare hydraulic cavity to power extra set of tooling</li>
-							<li>Weight: 3550 lbs</li>
+							<li>Weight: 3550 pounds.</li>
 							<li>Electrics: 220 Volts, 3 phase. Optional 440V or 220V, 1 phase</li>
 						</ul>
 						<p class="text-justify" >
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text">
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+65+Ton&form=3" target="_blank"><b>Click to Request Our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+65+Ton&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 					</div>
 				</div>
 
 				<div>	
 					<div class="content-main-lt">
-						<h3>Edwards 75 Ton "Jaws 4" Edwards Ironworker</h3>
+						<h3>75 Ton "Jaws 4 " Edwards Ironworker</h3>
 						<img src="http://www.americanmachinetools.com/images/edwards_ironworker_75.jpg" alt="Edwards 75 ton hydraulic Ironworker Machine">
 						<p class="bold-text">
 							<span class="content-price text-center">Price: $16899</span>
@@ -316,24 +326,25 @@
 							<li>Built in Plate Shear cuts 1/2 x 14, 3/4 x 10", 1-1/4 round bar</li>
 							<li>Built in Angle Shear cuts 5 x 5 x 3/8 angle</li>
 							<li>Built in Coper-Notcher 2-1/2 x 5 x 1/2 (standard equipment) </li>
-							<li>Weight: 3150 lbs</li>
+							<li>Weight: 3150 pounds</li>
 							<li>Electrics: 220 Volts, 3 phase. Optional 440V or 220V, 1 phase</li>
 						</ul>
 						<p class="text-justify">
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text">
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+iron+worker+75+ton&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+iron+worker+75+ton&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 					</div>
 				</div>
 
 				<div>	
 					<div class="content-main-lt">
-						<h3>Edwards 100 Ton "Jaws 4" Edwards Ironworker</h3>
+						<h3>100 Ton "Jaws 4" Edwards Ironworker</h3>
 						<img src="http://www.americanmachinetools.com/images/edwards_ironworker_100.jpg" alt="Edwards 100 ton hydraulic Ironworker Machine with spare hydraulic powered tooling station.">
 						<p class="bold-text">
 							<span class="content-price text-center">Price: $20499</span>
@@ -352,7 +363,7 @@
 							<li>Built in Angle Shear cuts 6 x 6 x 1/2 angle</li>
 							<li>Coper-Notcher 2-1/2 x 6 x 1/2 (optional)</li>
 							<li><b>2 versatile cavities power any 2 sets of tooling including 2 punch &amp; dies.</b></li>
-							<li>Weight: 3700 lbs</li>
+							<li>Weight: 3700 pounds.</li>
 							<li>Electrics: 220 Volts, 3 phase. Optional 440V or 220V, 1 phase</li>
 						</ul>
 						<p class="bold-text">
@@ -361,18 +372,19 @@
 						<p>
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
+						<p class="text-center bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text">
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+100+Ton&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+100+Ton&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 					</div>
 				</div>
 
 				<div>	
 					<div class="content-main-lt">
-						<h3>Edwards 100 Ton "Jaws 5" Edwards Ironworker</h3>
+						<h3>Edwards 100 Ton "Jaws 5" Deluxe Iron worker</h3>
 						<img src="http://www.americanmachinetools.com/images/edwards_ironworker_100_deluxe.jpg" alt="Higher Speed 100 ton Deluxe hydraulic Ironworker includes a Rod Shear (round &amp; square).">
 						<p class="bold-text">
 							<span class="content-price text-center">Price: $24899</span>
@@ -389,13 +401,14 @@
 							<li>Built in Angle Shear cuts 5 x 5 x 1/2 angle</li>
 							<li>Built in Coper-Notcher (3 x 6 x 3/8) included</li>
 							<li>Built in Rod Shear for round and square</li>
-							<li>Weight: 4700 lbs</li>
+							<li>Weight: 4700 pounds.</li>
 							<li>Electrics: 220 Volts, 3 phase. Optional 440V or 220V, 1 phase is special</li>
 						</ul>
 						<p>
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
 						<p class="bold-text">
+							
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
@@ -422,15 +435,14 @@
 							<li>Built-in Coper-Notcher (3 x 6 x 1/2) included</li>
 							<li><b>Spare hydraulic cavity to power extra set of tooling (see below)</b></li>
 							<li><b>Quick cycle time of 2.5 seconds.</b></li>
-							<li>Weight: 5500 lbs</li>
+							<li>Weight: 5500 pounds.</li>
 							<li>Electrics: 10 HP, 220 Volts, 3 phase. Optional 440V or 575V</li>
 						</ul>
 						<p>
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
-						<p class="bold-text">
-							Optional pipe bender, roll bender or shop press attachment available.
-						</p>
+						<p class="bold-text">Scroll down to see optional tooling below.</p>
+						<p class="bold-text">Optional pipe bender, roll bender or shop press attachment available.</p>
 						<p class="text-center">
 							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+120+Ton+150+Ton&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
@@ -465,6 +477,7 @@
 						<p>
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
+						<p class="bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text">
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
@@ -504,6 +517,7 @@
 							<li>Weight: 6000 pounds.</li>
 							<li>Electrics: 7.5 HP, 220 Volts, 3 phase.<br/>Optional 440V or 575V or 220V, 1 phase</li>
 						</ul>
+						<p class="bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text text-justify">
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
@@ -557,7 +571,7 @@
 							<li>2" (10) Schedule 40 Pipe Capacity</li>
 							<li>2-1/2" (00) .095" wall Tube Capacity</li>
 							<li>2-1/4" .083" Chromoly Capacity</li>
-							<li>Die Sets Sold Separately (<a href="http://www.americanmachinetools.com/pipe_bender_dies.htm">Click to See list of Die Sets</a>)</li>
+							<li>Die Sets Sold Separately (<a href="http://www.americanmachinetools.com/pipe_bender_dies.htm"> click to see the huge list of die sets</a>)</li>
 							<li>Cylinder 1-3/4" ram</li>
 							<li>Stroke 14"</li>
 							<li>Heavy Duly All Steel Construction</li>
