--- a/m.double_column_band_saw.htm
+++ b/m.double_column_band_saw.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Portable Line Boring Machine Tools for Heavy Equipment Bore Repair</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="portable, line boring, bore, repair, welder, machine, tools, heavy, equipment">
-    <meta name="description" content="Portable Line Boring Machine Tools and bore welders to repair heavy construction equipment by American Machine Tools Company">
+    <title>Double Column Band Saw Machines</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta name="Description" CONTENT="Twin Post Band Saw Machines for very straight cutting of large pipe and structural shapes. Sold by American Machine Tools Company">
+	<meta name="Keywords" CONTENT="double, column, twin, dual, 2, post, bandsaw, band, saw">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
