updated content in m.line_boring.htm

--- a/m.line_boring.htm
+++ b/m.line_boring.htm
@@ -171,6 +171,7 @@
 	                        <p><b>1 Caliper Jaw Extensions</b> - Extends the jaws of the Dial Caliper to measure inside holes with shaft still inside.</p>
 	                        <p><b>1 Telescoping Bore Gage Set</b> - To measure the diameter of your holes.</p>
 	                        <p><b>1 Wood case</b> - now with dolly wheels.</p>
+							<p class="bold-text">- scroll down below for info, photos, prices</p>
                         </div>
                     </div>
                 </div>
@@ -230,6 +231,7 @@
 	                        <p><b>1 Caliper Jaw Extensions</b> - Extends the jaws of the Dial Caliper to measure inside holes with shaft still inside.</p>
 	                        <p><b>1 Telescoping Bore Gage Set</b> - To measure the diameter of your holes.</p>
 	                        <p><b>1 Wood case</b> - now with dolly wheels.</p>
+							<p class="bold-text">- scroll down below for info, photos, prices</p>
 	                    </div>
                     </div>
                 </div>
@@ -289,6 +291,7 @@
 	                        <p><b>1 Caliper Jaw Extensions</b> - Extends the jaws of the Dial Caliper to measure inside holes with shaft still inside.</p>
 	                        <p><b>1 Telescoping Bore Gage Set</b> - To measure the diameter of your holes.</p>
 	                        <p><b>1 Wood case</b> - now with dolly wheels.</p>
+							<p class="bold-text">- scroll down below for info, photos, prices</p>
                     	</div>
                     </div>
                 </div>
@@ -320,7 +323,7 @@
                             <li><b>1 Elastic Bunge Cord</b> - Use the hold cones in position or to dampen boring bar vibration.</li>
                             <li><b>1 Solid Wood Case</b> - Padlockable, with 2 handles, and dolly wheels.</li>
                         </ul>
-                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS</p>
+                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS OF OPTIONS.</p>
                         <p class="bold-text">Optionals include:</p>
                         <ul>
                             <li> Milwaukee Portable Magnetic Drill Press with chuck: $1595. (see below) Variable speed, 9" stroke. You need this if you do not already have a mag drill with 3/4" chuck.</li>
@@ -368,7 +371,7 @@
                             <li><b>1 Elastic Bunge Cord</b> - Use the hold cones in position or to dampen boring bar vibration.</li>
                             <li><b>1 Solid Wood Case</b> - Padlockable, with 2 handles, and dolly wheels.</li>
                         </ul>
-                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS</p>
+                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS OF OPTIONS.</p>
                         <p class="bold-text">Optionals include:</p>
                         <ul>
                             <li> Milwaukee Portable Magnetic Drill Press with chuck: $1595. (see below) Variable speed, 9" stroke. You need this if you do not already have a mag drill with 3/4" chuck.</li>
@@ -416,7 +419,7 @@
                             <li><b>1 Elastic Bunge Cord</b> - Use the hold cones in position or to dampen boring bar vibration.</li>
                             <li><b>1 Solid Wood Case</b> - Padlockable, with 2 handles, and dolly wheels.</li>
                         </ul>
-                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS</p>
+                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS OF OPTIONS.</p>
                         <p class="bold-text">Optionals include:</p>
                         <ul>
                             <li> Milwaukee Portable Magnetic Drill Press with chuck: $1595. (see below) Variable speed, 9" stroke. You need this if you do not already have a mag drill with 3/4" chuck.</li>
@@ -464,7 +467,7 @@
                             <li><b>1 Elastic Bunge Cord</b> - Use the hold cones in position or to dampen boring bar vibration.</li>
                             <li><b>1 Solid Wood Case</b> - Padlockable, with 2 handles, and dolly wheels.</li>
                         </ul>
-                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS</p>
+                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS OF OPTIONS.</p>
                         <p class="bold-text">Optionals include:</p>
                         <ul>
                             <li> Milwaukee Portable Magnetic Drill Press with chuck: $1595. (see below) Variable speed, 9" stroke. You need this if you do not already have a mag drill with 3/4" chuck.</li>
@@ -570,7 +573,7 @@
                             <li><b>1 Elastic Bunge Cord</b> - Use the hold cones in position or to dampen boring bar vibration.</li>
                             <li><b>1 Solid Wood Case</b> - Padlockable, with 2 handles, and dolly wheels.</li>
                         </ul>
-                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS</p>
+                        <p class="bold-text">SCROLL WAY DOWN TO SEE PHOTOS OF OPTIONS.</p>
                         <p class="bold-text">Optionals include:</p>
                         <ul>
                             <li>Power Feed: $1695 or $1995. extra</li>
@@ -909,16 +912,16 @@
 	                                ALWAYS WEAR SAFETY GLASSES! ALWAYS KEEP HAIR, CLOTHING, HANDS AND FINGERS CLEAR!
 	                            </i>
 	                        </p>
-	                        <p>
+	                        <p class="bold-text">
 	                            <a href="http://www.americanmachinetools.com/reduce_cutting_tool_chatter.htm">Click for TROUBLESHOOTING: HOW TO REDUCE CUTTING TOOL CHATTER</a>
 	                        </p>
-	                        <p>
+	                        <p class="bold-text">
 	                            <a href="http://www.youtube.com/watch?v=bcvWB1_mnZE&context=C4d8a81bADvjVQa1PpcFOK17bCJGEdOE-gMk_r1s_KNDWV1zbG7K8=">Click to see customer VIDEO of our Q150-S Line Boring Machine</a>
 	                        </p>
-	                        <p>
+	                        <p class="bold-text">
 	                            <a href="http://www.youtube.com/watch?v=4wdtmvuRS4M&feature=plcp">Click to see a 2nd customer's VIDEO of our Q150-L Line Boring Equipment</a>
 	                        </p>
-	                        <p>
+	                        <p class="bold-text">
 	                            <a href="http://www.youtube.com/watch?v=O0kRkWC-CmM&feature=relmfu">Click to see a 3rd VIDEO of the Q150 Portable Line Boring Machine filmed by a customer</a>
 	                        </p>
                         </div>
